--- a/billion_bank_top3.ipynb
+++ b/billion_bank_top3.ipynb
@@ -20,32 +20,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas                                       as pd\n",
-    "import numpy                                        as np\n",
-    "import seaborn                                      as sns\n",
-    "import matplotlib.pyplot                            as plt\n",
-    "import datetime                                     as dt\n",
-    "import xgboost                                      as xgb\n",
     "import pickle\n",
-    "\n",
-    "\n",
-    "from boruta                         import BorutaPy\n",
-    "from random import choices\n",
-    "from scipy                          import stats        as ss\n",
-    "from scikitplot.metrics             import plot_confusion_matrix, plot_calibration_curve, plot_cumulative_gain, plot_roc\n",
-    "from sklearn.preprocessing          import RobustScaler, MinMaxScaler, LabelEncoder\n",
-    "from sklearn.model_selection        import train_test_split, cross_val_score, cross_validate, RandomizedSearchCV, StratifiedKFold\n",
-    "from sklearn.ensemble               import RandomForestClassifier, BaggingClassifier, GradientBoostingClassifier\n",
-    "from sklearn.linear_model           import LogisticRegression, RidgeClassifier\n",
-    "from lightgbm                       import LGBMClassifier\n",
-    "from scikitplot.metrics             import plot_confusion_matrix, plot_roc_curve, plot_cumulative_gain\n",
-    "from sklearn.metrics                import accuracy_score, precision_score, recall_score, f1_score, roc_auc_score, confusion_matrix, cohen_kappa_score\n",
-    "from imblearn.combine               import SMOTETomek\n",
-    "from category_encoders              import MEstimateEncoder, TargetEncoder\n",
-    "from xgboost                        import XGBClassifier\n",
     "import warnings\n",
+    "import pandas                 as pd\n",
+    "import numpy                  as np\n",
+    "import seaborn                as sns\n",
+    "import matplotlib.pyplot      as plt\n",
+    "import datetime               as dt\n",
+    "import xgboost                as xgb\n",
     "\n",
-    "warnings.filterwarnings(\"ignore\")\n"
+    "from scipy                    import stats        as ss\n",
+    "\n",
+    "from boruta                   import BorutaPy\n",
+    "from random                   import choices\n",
+    "from scikitplot.metrics       import plot_confusion_matrix, plot_calibration_curve, plot_cumulative_gain, plot_roc\n",
+    "from sklearn.preprocessing    import RobustScaler, MinMaxScaler, LabelEncoder\n",
+    "from sklearn.model_selection  import train_test_split, cross_val_score, cross_validate, RandomizedSearchCV, StratifiedKFold\n",
+    "from sklearn.ensemble         import RandomForestClassifier, BaggingClassifier, GradientBoostingClassifier\n",
+    "from sklearn.linear_model     import LogisticRegression, RidgeClassifier\n",
+    "from lightgbm                 import LGBMClassifier\n",
+    "from scikitplot.metrics       import plot_confusion_matrix, plot_roc_curve, plot_cumulative_gain\n",
+    "from sklearn.metrics          import accuracy_score, precision_score, recall_score, f1_score, roc_auc_score, confusion_matrix, cohen_kappa_score\n",
+    "from imblearn.combine         import SMOTETomek\n",
+    "from category_encoders        import MEstimateEncoder, TargetEncoder\n",
+    "from xgboost                  import XGBClass\n",
+    "\n",
+    "warnings.filterwarnings(\"ignore\")"
    ]
   },
   {
@@ -71,11 +71,11 @@
     "    plot_cumulative_gain(y_test, y_proba, figsize=(10,10), ax=ax[1])\n",
     "    plot_roc(y_test, y_proba, ax=ax[2])\n",
     "    results = {'accuracy_score': accuracy_score(y_test, y_pred),\n",
-    "             'precision_score': precision_score(y_test, y_pred),\n",
-    "             'recall_score': recall_score(y_test, y_pred),\n",
-    "             'f1_score': f1_score(y_test, y_pred),\n",
-    "             'roc_auc': roc_auc_score(y_test, y_pred),\n",
-    "             'kappa_score': cohen_kappa_score(y_test, y_pred)}\n",
+    "               'precision_score': precision_score(y_test, y_pred),\n",
+    "               'recall_score': recall_score(y_test, y_pred),\n",
+    "               'f1_score': f1_score(y_test, y_pred),\n",
+    "               'roc_auc': roc_auc_score(y_test, y_pred),\n",
+    "               'kappa_score': cohen_kappa_score(y_test, y_pred)}\n",
     "    results = pd.DataFrame(results, index=[model_name])\n",
     "\n",
     "        \n",
@@ -84,8 +84,8 @@
     "\n",
     "\n",
     "def cross_validation(model, x, y, k, verb):\n",
+    "    \n",
     "    kfold = StratifiedKFold(n_splits=k, shuffle=True)\n",
-    "\n",
     "    i=1\n",
     "    f1_list = []\n",
     "    acc_list = []\n",
@@ -149,7 +149,7 @@
     "\n",
     "def jupyter_settings():\n",
     "    %matplotlib inline\n",
-    "    %pylab inline\n",
+    "    #%pylab inline\n",
     "    \n",
     "    plt.style.use( 'bmh' )\n",
     "    plt.rcParams['figure.figsize'] = [12, 12]\n",
@@ -1046,16 +1046,16 @@
     "# Removendo inconsistencias na num_contas_bancarias.\n",
     "df3 = df3[df3['num_contas_bancarias'] <= 10]\n",
     "\n",
-    "# Removendo inconsistencias na num_contas_bancarias.\n",
+    "# Removendo inconsistencias na num_cartoes_credito.\n",
     "df3 = df3[df3['num_cartoes_credito'] <= 10]\n",
     "\n",
-    "# Removendo inconsistencias na num_contas_bancarias.\n",
+    "# Removendo inconsistencias na num_pagtos_atrasados.\n",
     "df3 = df3[df3['num_pgtos_atrasados'] <= 50]\n",
     "\n",
-    "# Removendo inconsistencias na num_contas_bancarias.\n",
+    "# Removendo inconsistencias na num_consultas_credito.\n",
     "df3 = df3[df3['num_consultas_credito'] <= 50]\n",
     "\n",
-    "# Removendo inconsistencias na num_contas_bancarias.\n",
+    "# Removendo inconsistencias na taxa_juros.\n",
     "df3 = df3[df3['taxa_juros'] <= 500]\n",
     "\n",
     "\n",
@@ -2157,7 +2157,7 @@
     "              'n_estimators': np.arange(10, 105, 15)}\n",
     "\n",
     "lgbm_random_cv = RandomizedSearchCV(estimator=lgbm, param_distributions=parameters,\n",
-    "                                scoring='f1', n_iter=100, cv=10, verbose=2, n_jobs=-1)\n",
+    "                                    scoring='f1', n_iter=100, cv=10, verbose=2, n_jobs=-1)\n",
     "\n",
     "a = lgbm_random_cv.fit(X_train, y_train)\n",
     "a.best_estimator_"
@@ -2251,8 +2251,8 @@
    ],
    "source": [
     "lgbm_tunned = LGBMClassifier(learning_rate=0.3860714285714285, max_depth=10,\n",
-    "               min_data_in_leaf=650, n_estimators=40, num_leaves=256,\n",
-    "               subsample=0.3635714285714286)\n",
+    "                             min_data_in_leaf=650, n_estimators=40, num_leaves=256,\n",
+    "                             subsample=0.3635714285714286)\n",
     "\n",
     "lgbm_model = lgbm_tunned.fit(X_train, y_train)\n",
     "yh = lgbm_model.predict(X_test)\n",
